@@ -421,18 +421,22 @@ void handleOnStatusDBServer(Agent* agent, Node const& snapshot,
 void handleOnStatusCoordinator(Agent* agent, Node const& snapshot, HealthRecord& persisted,
                                HealthRecord& transisted, std::string const& serverID) {
   if (transisted.status == Supervision::HEALTH_STATUS_FAILED) {
-    // if the current foxxmaster server failed => reset the value to ""
-    if (snapshot.hasAsString(foxxmaster).first == serverID) {
-      VPackBuilder create;
+    VPackBuilder create;
+    {
+      VPackArrayBuilder tx(&create);
       {
-        VPackArrayBuilder tx(&create);
-        {
-          VPackObjectBuilder d(&create);
-          create.add(foxxmaster, VPackValue(""));
-        }
+        VPackObjectBuilder b(&create);
+        // unconditionally increase reboot id and plan version
+        Job::addIncreaseRebootId(create, serverID);
       }
-      singleWriteTransaction(agent, create, false);
+
+      // if the current foxxmaster server failed => reset the value to ""
+      if (snapshot.hasAsString(foxxmaster).first == serverID) {
+        VPackObjectBuilder d(&create);
+        create.add(foxxmaster, VPackValue(""));
+      }
     }
+    singleWriteTransaction(agent, create, false);
   }
 }
 
